# backup-plugins

./: README.md  shadows.c  shadows.xml.in
animation/: animation-internal.h  animation.c  animation.xml.in  animeffect.h  compiz-animation.h  dodge.c  magiclamp.c  multi.h  plugin.info  restack.c  walker.c
animationaddon-compiz-0.9/: CMakeLists.txt
animationaddon-compiz-0.9/src/: airplane.cpp  animationaddon.cpp  burn.cpp  particle.cpp  polygon.cpp  private.h
animationjc-compiz-0.9/: compiz-animationjc.pc.in
animationjc-compiz-0.9/src/: animationjc.cpp  blackhole.cpp  flicker.cpp  popcorn.cpp
animationjc-master/: CMakeLists.txt  Makefile  animationjc.h  animationjc.xml.in  ghost.cpp  plugin.info  private.h  raindrop.cpp
atlantis-compiz-0.9/: README  atlantis.xml.in
atlantis-compiz-0.9/models/: ObjToC.java  bfish.blend  bfish.mtl  chromis.blend  chromis.mtl  coral.blend  coral2.blend  coral2_low.blend  coral_low.blend  crab.blend  fish.blend  fish.mtl  fish2.blend  fish2.mtl  suzume_02.dxf  tyoutyou_omaru10.dxf
atlantis-compiz-0.9/src/: atlantis.cpp  atlantis.h  bfish.cpp  bubble.cpp  chromis.cpp  coral.cpp  coral2.cpp  crab.cpp  dolphin.cpp  fish.cpp  fish2.cpp  float.cpp  scuttle.cpp  shark.cpp  swim.cpp  util.cpp  water.cpp  whale.cpp
bailer-compiz-0.9/: bailer.xml.in
bailer-compiz-0.9/src/: bailer.cpp
basicblur/: CMakeLists.txt  basicblur.c  basicblur.xml.in  plugin.info
compiz-plugins-livewallpapers/: AUTHORS  CREDITS  ChangeLog  TODO  autogen.sh  configure.ac
compiz-plugins-livewallpapers/debian/: changelog  control  copyright  rules
compiz-plugins-livewallpapers/images/: Makefile.am  galaxy-light.xcf  space.xcf
compiz-plugins-livewallpapers/metadata/: Makefile.am  galaxy.xml  galaxy.xml.in
compiz-plugins-livewallpapers/po/: LINGUAS  Makevars  POTFILES  POTFILES.in  en_GB.po  ru_RU.po  uk_UA.po
compiz-plugins-livewallpapers/src/: Makefile.am
compiz-plugins-livewallpapers/src/galaxy/: Makefile.am  galaxy.c  galaxy.h  particle.c  particle.h
compositionkit/: CMakeLists.txt
compositionkit/ckservice/: ckservice-main.c  ckservice.xml
compositionkit/compositor/: compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  inputdevice.c  matrix.c  output.c  pointer.c  shader.c  shaders.h  spring.c  sprite.c  surface.c
desktopclick-compiz-0.9/: CMakeLists.txt  dclick.xml.in
desktopclick-compiz-0.9/src/: dclick.cpp  dclick.h
dock-compiz-0.9/: CMakeLists.txt  dock.xml.in
dock-compiz-0.9/src/: dock.cpp  dock.h  ipw.cpp  ipw.h
dodge-compiz-0.8/: CMakeLists.txt  plugin.info
drunken-compiz-0.8/: CMakeLists.txt  Makefile  archivo nuevo  drunken.cpp  drunken.h  drunken.xml.in  plugin.info
drunken-compiz-0.9/: CMakeLists.txt  drunken.xml.in
drunken-compiz-0.9/src/: drunken.cpp  drunken.h
firepaint/src/: firepaint.cpp  firepaint.h  firepaint_tex.h
flash-0.9/: CMakeLists.txt  README  flash.xml.in  plugin.info
flash-0.9/src/: flash.cpp  flash.h
floatingobjects-master/: Makefile  fobjects-internal.h  fobjects.c  fobjects.xml.in  plugin.info
freewins-compiz-0.9/: freewins.xml.in
freewins-compiz-0.9/src/: action.cpp  events.cpp  freewins.cpp  freewins.h  input.cpp  paint.cpp  util.cpp
glsl-compiz-0.9/CompizFBO/: CMakeLists.txt  fbo.xml.in
glsl-compiz-0.9/CompizShader/: CMakeLists.txt  shader_fragment_simple  shader_vertex
glsl-master/CompizBullet/: CMakeLists.txt  bullet.xml.in
glsl-master/CompizBullet/src/: boxDraw.cpp  bullet.cpp  bullet.h
glsl-master/CompizShader/: shader.xml.in
headtracking-compiz-0.9/: CMakeLists.txt  README  headtracking.xml.in
headtracking-compiz-0.9/src/: headtracking.cpp  headtracking.h
hoverfx-compiz-0.9/: CMakeLists.txt  hoverfx.xml.in
hoverfx-compiz-0.9/src/: hoverfx.cpp  hoverfx.h
image-overlay-compiz-0.9/: CMakeLists.txt  imageoverlay.xml.in
image-overlay-compiz-0.9/images/: COPYRIGHT
image-overlay-compiz-0.9/src/: imageoverlay.cpp  imageoverlay.h
locker-compiz-0.9/: CMakeLists.txt  compiz-locker.pc.in  locker.xml.in
locker-compiz-0.9/src/: locker.cpp  private.h
mousetrails/: mousetrails.c  mousetrails.xml.in  plugin.info
mousetrails-compiz-0.9/: CMakeLists.txt  mousetrails.xml.in
mousetrails-compiz-0.9/src/: mousetrails.cpp  mousetrails.h
multitouch/: CMakeLists.txt  Makefile  multitouch.c  multitouch.xml.in  plugin.info
prompt-49ad054d4bb52e956035ca81572001057f61acaa/: plugin.info  prompt.c
radial-switcher-master/: TODO  configure.ac
radial-switcher-master/src/: Makefile.am  switcher-util.c  switcher-util.h
radial-switcher-master/tests/: Makefile.am  check_switcher-util.c
ring-menu/: liststruct.h  plugin.info  ringmenu.c  ringmenu.xml.in
session-xdg-master/: plugin.info  session.c  session.xml.in
shadows/: plugin.info  shadows.c~
simple-animations-compiz-0.8/: CMakeLists.txt  Makefile  animationsim.c  bounce.c  expand.c  explode3d.c  fan.c  flyin.c  plugin.info  pulse.c  rotatein.c  sheet.c
simple-animations-compiz-0.9/: CMakeLists.txt  animationsim.xml.in
simple-animations-compiz-0.9/src/: animationsim.cpp  animationsim.h  bounce.cpp  expand-piecewise.cpp  expand.cpp  fan.cpp  flyin.cpp  rotatein.cpp  sheet.cpp
smackpad-master/: plugin.info  smackpad.c  smackpad.xml.in
snowglobe-compiz-0.9/: CMakeLists.txt  snowglobe.xml.in
snowglobe-compiz-0.9/src/: movement.cpp  snowflake.cpp  snowglobe.cpp  snowglobe.h  snowman.cpp  water.cpp
sound-master/: Makefile
sound-master/alsa/: alsa.c  alsa.xml.in  plugin.info
sound-master/data/: Makefile
sound-master/include/: sound.h
sound-master/ogg/: plugin.info  sndogg.c  sndogg.xml.in
sound-master/portaudio/: plugin.info  sndportaudio.c  sndportaudio.xml.in
sound-master/sound/: plugin.info  sound.c  sound.xml.in
sound-master/soundeffects/: plugin.info  soundeffects.c  soundeffects.xml.in
twist-compiz-0.9/: CMakeLists.txt  twist.xml.in
twist-compiz-0.9/src/: twist.cpp  (+1 more)
unclutter/: plugin.info  unclutter.c  unclutter.xml.in
visualevent/: CMakeLists.txt  README  plugin.info  visualevent.c
wizard-compiz-0.9/: wizard.xml.in
x11locker-compiz-0.9/: CMakeLists.txt  xlocker.xml.in
(+16 files in other folders)
